# IR2134

./: .gitignore  .rmf_schedule_node.yaml  CLAUDE.md  rmf_api_config.py
Ejercicios/ejercicio1/: INFORME-avances-RMF.md  openrmf-FPUV.md  psychology.building.yaml  psychology.building.yaml.bak  psychology.world
Ejercicios/ejercicio1/nav_graphs/: 0.yaml
Ejercicios/ejercicio2/: INFORME-avances-RMF.md  README.odt  industrial.building.yaml  industrial.world
Ejercicios/ejercicio2/nav_graphs/: 0.yaml
buildings/: ejemplo-traffic.building.yaml
docs/superpowers/specs/: 2026-06-19-ejercicio2-industrial-upc-design.md
src/industrial_upc/industrial_upc_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/industrial_upc/industrial_upc_config/: CMakeLists.txt  package.xml
src/industrial_upc/industrial_upc_fleet_adapter/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/industrial_upc/industrial_upc_maps/: CMakeLists.txt  package.xml
src/industrial_upc/industrial_upc_simulation/: CMakeLists.txt  package.xml
src/psychology_uv/psychology_uv_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/psychology_uv/psychology_uv_config/: CMakeLists.txt  package.xml
src/psychology_uv/psychology_uv_config/config/psychology_uv_sim/: cleanRobot_config.yaml  deliveryRobot_config.yaml  tinyRobot_config.yaml
src/psychology_uv/psychology_uv_config/include/psychology_uv_config/: psychology_uv.rviz
src/psychology_uv/psychology_uv_config/launch/: common.launch.xml  psychology_uv_sim.launch.xml
src/psychology_uv/psychology_uv_fleet_adapter/: CHANGELOG.rst  (+4 more)
(+40 files in other folders)
